added documents table

--- a/src/main/resources/templates/company-info.html
+++ b/src/main/resources/templates/company-info.html
@@ -141,6 +141,7 @@
 
 
     <div class="home__right" style="min-height: 60vh;">
+      <a href="#" class="btn btn__primary"><i class="fa-regular fa-heart"></i>&nbsp;Add to watchlist</a><br/><br/>
       <img th:src="@{'/documents/' + ${company.id} + '/' + ${company.image}}" alt="heading" />
     </div>
   </div>
