--- a/src/main/resources/templates/fragment/company-dashboard.html
+++ b/src/main/resources/templates/fragment/company-dashboard.html
@@ -4,7 +4,7 @@
         <li><a th:href="@{/company/overview}">Company Overview</a></li>
         <li><a th:href="@{/company/all-articles}">Articles</a></li>
         <li><a href="#">Investment Details</a></li>
-        <li><a href="#">Shareholder Management</a></li>
+        <li><a th:href="@{/company/management}">Management Team</a></li>
         <li><a href="#">Financial Performance</a></li>
         <li><a href="#">Documents and Reports</a></li>
         <li><a th:href="@{/notification}">Notification<sup th:if="${unread}">[[${unread}]]</sup></a></li>
