--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -8,8 +8,7 @@
 	<header class='container header__container'
 		th:replace="fragment/header.html :: header"></header>
 		
-	<div class='full__width' th:insert="fragment/nav.html :: navbar">
-	</div>
+	<div class='full__width' th:insert="fragment/nav.html :: navbar"></div>
 
 	<!-- Most Momentum -->
 	<section class='momentum__section'>
