--- a/src/main/resources/static/css/companydashboard.css
+++ b/src/main/resources/static/css/companydashboard.css
@@ -126,3 +126,32 @@ sup{
 .input-label:valid+span {
     color: #ffffff;
   }
+.management-input{
+    display:flex;
+    margin: 10px 3rem;
+    flex-direction: column;
+}
+
+.management-input-field{
+    display: inline-flex;
+    margin: 0px;
+    width: 90%;
+    height: 3rem;
+    border-radius: 5px;
+    border: 1px solid #ccc;
+    padding: 0 0 0 2rem;
+    font-size: 1.2rem;
+}
+.management-input-field:focus{
+    outline: none;
+}
+.button{
+    width: 500px;
+    height: 3rem;
+    border-radius: 5px;
+    border: none;
+    background-color: #333;
+    color: #fff;
+    font-size: 1.2rem;
+    cursor: pointer;
+}
