--- a/src/main/resources/templates/fragment/footer.html
+++ b/src/main/resources/templates/fragment/footer.html
@@ -15,7 +15,7 @@
     </ul>
   </div>
   <div class="third">
-    <h2>Wrok Together</h2>
+    <h2>Work Together</h2>
     <ul class='footer__list'>
       <li><a href="#" class='about__link'>Raise Capital</a></li>
       <li><a href="#" class='about__link'>Refer a friend</a></li>
