--- a/src/main/resources/templates/company-info.html
+++ b/src/main/resources/templates/company-info.html
@@ -141,6 +141,10 @@
 
 
     <div class="home__right" style="min-height: 60vh;">
+	<div th:if="${!iswatchlistedblank and ! #lists.contains(companyids, company.id)}"><a th:href="@{'/company/addtowatchlist/'+${company.id}}" class="btn btn__primary"><i class="fa-regular fa-heart" ></i>&nbsp;Add to watchlist</a><br/><br/>
+      </div>
+      <div th:if="${iswatchlistedblank}"><a th:href="@{'/company/addtowatchlist/'+${company.id}}" class="btn btn__primary"><i class="fa-regular fa-heart" ></i>&nbsp;Add to watchlist</a><br/><br/>
+      </div>
       <img th:src="@{'/documents/' + ${company.id} + '/' + ${company.image}}" alt="heading" />
     </div>
   </div>
