--- a/src/main/resources/static/css/companydashboard.css
+++ b/src/main/resources/static/css/companydashboard.css
@@ -1,4 +1,5 @@
 body {
+    font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
 }
@@ -96,8 +97,14 @@ sup{
     border: none;
     font-size: 1.1rem;
 }
-#title:focus{
+#title:focus, .title{
     outline: none;
+}
+.title{
+    width: 95%;
+    height: 95%;
+    border: none;
+    font-size: 1.1rem;
 }
 
 #file-name{
@@ -146,7 +153,7 @@ sup{
     outline: none;
 }
 .button{
-    width: 500px;
+    width: 300px;
     height: 3rem;
     border-radius: 5px;
     border: none;
