modifying templates and css file

--- a/src/main/resources/templates/fragment/admin-dashboard.html
+++ b/src/main/resources/templates/fragment/admin-dashboard.html
@@ -23,5 +23,8 @@
         <a th:href="@{/admin/reports}">Reports Table</a>
         <a th:href="@{/admin/companies/statisticsgraph}">Statistics Graph</a>
       </div>
+         <li><a th:href="@{/change_password}">Change Password</a></li>
+         <li><a th:href="@{/change_password}">Logout</a></li>
+
     </li>
   </ul>
