--- a/src/main/resources/templates/fragment/nav.html
+++ b/src/main/resources/templates/fragment/nav.html
@@ -31,6 +31,9 @@
 					<a th:href="@{/dashboard}" class="sub-menu-link">
 						<p>Portfolio</p>
 					</a>
+					<a th:href="@{/user/edit/details}" class="sub-menu-link">
+						<p>Edit profile</p>
+					</a>
 					<a th:href="@{/change_password}" class="sub-menu-link">
 						<p>Change Password</p>
 					</a>
