--- a/src/main/resources/templates/load_fund.html
+++ b/src/main/resources/templates/load_fund.html
@@ -90,17 +90,11 @@
                 <!-- total collateral -->
                 <div class="load board">
                     <div>
-                        <p class="collateral-title">NPR &nbsp;<span>0.0</span></p>
+                        <p class="collateral-title">NPR &nbsp;<span>[[${totalcollateralamount}]]</span></p>
                         <p class="collateral-sub-tile">Total Collateral</p>
                     </div>
                 </div>
-                <!-- total collateral -->
-                <div class="load board">
-                    <div>
-                        <p class="collateral-title">NPR &nbsp;<span>0.0</span></p>
-                        <p class="collateral-sub-tile">Available Collateral</p>
-                    </div>
-                </div>
+             
             </div>
         </div>
     </section>
