added documents table

--- a/src/main/resources/static/css/companydashboard.css
+++ b/src/main/resources/static/css/companydashboard.css
@@ -70,6 +70,7 @@ sup{
     border: 1px solid #ccc;
     padding: 0 0 0 2rem;
     font-size: 1.2rem;
+    display: inline-flex;
 }
 
 .file-input{
@@ -108,12 +109,11 @@ sup{
 }
 
 #file-name{
-    position: absolute;
-    top: 88px;
-    margin-left: 120px;
+    margin: auto 20px;
     text-align: center;
     font-size: 1.2rem;
 }
+
 .input-label{
     cursor: pointer;
     border: 1px solid #cccccc;
