--- a/src/main/resources/templates/company-info.html
+++ b/src/main/resources/templates/company-info.html
@@ -66,7 +66,7 @@
                   [[${member.getMiddleName()}]]&nbsp;
                   [[${member.getLastName()}]]</td>
                 </td>
-                <td>[[${getPosition()}]]</td>
+                <td>[[${member.getPosition()}]]</td>
                 <td><a href="#">LinkedIn</a></td>
               </tr>
             </tbody>
