--- a/src/main/resources/templates/company-overview.html
+++ b/src/main/resources/templates/company-overview.html
@@ -13,15 +13,10 @@
         <div class="input-field" >
           <input type="text" name="title" id="title" placeholder="Title" />
         </div>
-          <div class="input-field">
-            <label for="audit_report" class="input-label">
-              <input type="file" class="file-input" name="audit_report" id="audit-report"/>
-              <span for="audit_report" class="help-text">Upload your audit report</span>
-              <span id="file-name" class="file-name">No file selected</span>
-            </label>
-          </div>
+        <div>
           <textarea name="description" id="description" cols="30" rows="10" placeholder="Description"></textarea>
-        <button type="submit" class="btn sumbit">Submit</button>
+        </div><br/>
+        <button type="submit" class="button" style="margin-left:3rem;">Submit</button>
       </form>
     </div>
     <script>
