--- a/src/main/resources/static/css/details.css
+++ b/src/main/resources/static/css/details.css
@@ -91,11 +91,41 @@
     font-size: 13px;
     color: var(--color-blue-variant);
 }
+
+.toggle-list{
+    display: none;
+}
+
 .dropdown{
   background:#efefef;
   padding: 10px;
-  width: -webkit-fill-available;
-  margin-top:20px;
+  width: 17rem;
+  margin-top:5px;
+  position: absolute;
+  z-index: 99;
+
+}
+
+.dropdown-content{
+    width: 100%;
+}
+
+.dropdown-list{
+    width: 100%;
+    margin-left: 20px;
+    color:#303030;
+    display: block;
+}
+.hide{
+    display: none;
+}
+
+.dropdown-content:hover{
+    background-color: #303030;
+
+}
+.dropdown-list:hover{
+    color:#f8f8f8;
 }
 
 .payment-btn-group{
