--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -81,7 +81,7 @@ body {
 
 /* ===================== GENERAL STYLES ========================= */
 .container {
-	width: var(--container-width-lg);
+	width: var(--container-width-md);
 	margin: 5px auto;
 }
 
