--- a/src/main/resources/templates/company-list.html
+++ b/src/main/resources/templates/company-list.html
@@ -12,14 +12,18 @@
     <div class="container mostfunded__container">
 
       <h2>Companies</h2>
-      <select name="sectors" id="sector-dropdown">
         <div class="dropdown">
-          <p class="btn">Filter By Sector<i class="fa-solid fa-plus"></i></p>
-          <div class="dropdown-content" th:each="sector : ${sectorlist}">
-            <a href="#" class="btn">[[${sector}]]</a>
+          <p class="button" onclick="toggleElements()">
+            Filter By Sector&nbsp;
+            <i class="fa-solid fa-plus" id="symbol"></i>
+          </p>
+          <div class="toggle-list" id="toggle-elements">
+            <div class="dropdown-content" th:each="sector : ${sectorlist}">
+              <a href="#" class="dropdown-list">[[${sector}]]</a>
+            </div>
           </div>
         </div>
-      </select>
+        </div>
       
       <div class="cards row">
 
@@ -30,5 +34,14 @@
     </div>
   </section>
   <footer th:insert="fragment/footer.html :: footer"></footer>
+  <script>
+    function toggleElements() {
+      var name = document.getElementById("symbol");
+
+      document.getElementById("toggle-elements").classList.toggle("show");
+      name.className = (name.className === "fa-solid fa-plus" ? "fa-solid fa-minus" : "fa-solid fa-plus");
+      
+    }
+  </script>
 </body>
 </html>
