--- a/src/main/resources/templates/companydashboard.html
+++ b/src/main/resources/templates/companydashboard.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Sidebar Example</title>
-    <link rel="stylesheet" href="css/companydashboard.css">
+    <link rel="stylesheet" th:href="@{/css/companydashboard.css}">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 <body>
