--- a/src/main/resources/templates/fragment/admin-dashboard.html
+++ b/src/main/resources/templates/fragment/admin-dashboard.html
@@ -24,7 +24,7 @@
         <a th:href="@{/admin/companies/statisticsgraph}">Statistics Graph</a>
       </div>
          <li><a th:href="@{/change_password}">Change Password</a></li>
-         <li><a th:href="@{/change_password}">Logout</a></li>
+         <li><a th:href="@{/logout}">Logout</a></li>
 
     </li>
   </ul>
