--- a/src/main/resources/templates/viewcompany.html
+++ b/src/main/resources/templates/viewcompany.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
     <head>
-      <title>View Users</title>
+      <title>View Company</title>
       <link rel="stylesheet" type="text/css" th:href="@{/css/viewpage.css}" />
       <link
         rel="stylesheet"
