--- a/src/main/resources/templates/fragment/dashboard.html
+++ b/src/main/resources/templates/fragment/dashboard.html
@@ -3,9 +3,9 @@
     <div class=" dashboard__container">
         <div class="left__dashboard board" th:fragment="left-fragment">
             <div class="dashboard-title-wrap">
-                <div class="dashboard-title"><a th:href="@{/riskinfo}">Dashboard</a></div>
-                <div class="dashboard-title"><a th:href="@{/myinfo}">My Information</a></div>
-                <div class="dashboard-title"><a th:href="@{'/investmenthistory/'}">My Investment</a></div>
+                <div class="dashboard-title"><a th:href="@{/user/riskinfo}">Dashboard</a></div>
+                <div class="dashboard-title"><a th:href="@{/user/myinfo}">My Information</a></div>
+                <div class="dashboard-title"><a th:href="@{'/user/investmenthistory/'}">My Investment</a></div>
                 
                 <div class="dropdown-manage-fund">
                     <button onclick="manageFund()" class="drop-btn">
@@ -13,9 +13,9 @@
                         <span>&nbsp;v&nbsp;</span>
                     </button>
                     <div id="fundManagement" class="fundManagementContent">
-                        <div> <a th:href="@{'/collateralsummery/'+${id}+'/'}"><i class="fa-sharp fa-solid fa-arrow-right"></i>&nbsp;Collateral History</a></div>
+                        <div> <a th:href="@{'/user/collateralsummery/'+${id}+'/'}"><i class="fa-sharp fa-solid fa-arrow-right"></i>&nbsp;Collateral History</a></div>
                         
-                        <div><a th:href="@{'/fundhistory/'+${id}+'/'}"><i class="fa-sharp fa-solid fa-arrow-right"></i>&nbsp;Fund Transfer History</a></div>
+                        <div><a th:href="@{'/user/fundhistory/'+${id}+'/'}"><i class="fa-sharp fa-solid fa-arrow-right"></i>&nbsp;Fund Transfer History</a></div>
                     </div>
                 </div>
             </div>
@@ -51,8 +51,8 @@
                 </div>
 
                 <div>
-                    <a th:href="@{/loadfund}">Load</a>
-                    <a th:href="@{/refund/collateral}">Refund</a>
+                    <a th:href="@{/user/loadfund}">Load</a>
+                    <a th:href="@{/user/refund/collateral}">Refund</a>
                 </div>
             </div>
 
