--- a/src/main/resources/templates/fragment/nav.html
+++ b/src/main/resources/templates/fragment/nav.html
@@ -16,7 +16,7 @@
 			<li sec:authorize="hasRole('ROLE_ANONYMOUS')"><a th:href="@{/register}" class="link">Sign Up</a></li>
 
 			
-            <li sec:authorize="hasRole('ROLE_USER')"><a th:href="@{/company/mywatchlist}" class="link">My Watchlist</a></li>
+            <li sec:authorize="hasRole('ROLE_USER')"><a th:href="@{/user/company/mywatchlist}" class="link">My Watchlist</a></li>
 
 			<li sec:authorize="hasRole('ROLE_USER')"
 				style="position: relative; cursor: pointer; color:#fff; font-size: 18px; user-select: none;" onclick="document.querySelector('.sub-menu-wrap').classList.toggle('active-menu')"> Profile
@@ -28,7 +28,7 @@
 						<h2 sec:authorize="hasRole('ROLE_USER')">[[${#authentication.principal.getFname}]][[${#authentication.principal.getLname}]]</h2>
 					</div>
 					<hr>
-					<a th:href="@{/dashboard}" class="sub-menu-link">
+					<a th:href="@{/user/dashboard}" class="sub-menu-link">
 						<p>Portfolio</p>
 					</a>
 					<a th:href="@{/user/edit/details}" class="sub-menu-link">
