--- a/src/main/resources/templates/viewcollateral.html
+++ b/src/main/resources/templates/viewcollateral.html
@@ -3,18 +3,20 @@
 
 <html>
 <head>
-	
-  <title>View Users</title>
-    <link rel="stylesheet" type="text/css" href="css/viewpage.css">
-    <link rel="stylesheet" type="text/css" href="css/admindashboard.css">
-</head>
-<body>
-	
-  <div class="dashboard">
-    <div class="sidebar">
-      <h2>Dashboard</h2>
-      <ul th:insert="fragment/admin-dashboard.html :: dashboard-left"></ul>
-    </div>
+      <title>View Company</title>
+      <link rel="stylesheet" type="text/css" th:href="@{/css/viewpage.css}" />
+      <link
+        rel="stylesheet"
+        type="text/css"
+        th:href="@{/css/admindashboard.css}"
+      />
+    </head>
+    <body>
+      <div class="dashboard">
+        <div class="sidebar">
+          <h2>Dashboard</h2>
+          <ul th:insert="fragment/admin-dashboard.html :: dashboard-left"></ul>
+        </div>
     <table>
       <tr>
         <th>First Name</th>
